--- a/GuildManage/App.config
+++ b/GuildManage/App.config
@@ -9,6 +9,7 @@
   </startup>
   <connectionStrings>
     <add name="GuildeManageEntities" connectionString="metadata=res://*/GuildDB.csdl|res://*/GuildDB.ssdl|res://*/GuildDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-D84CINDD\SQLEXPRESS;initial catalog=GuildeManage;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="GuildeManageEntities1" connectionString="metadata=res://*/BddGuild.csdl|res://*/BddGuild.ssdl|res://*/BddGuild.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-D84CINDD\SQLEXPRESS;initial catalog=GuildeManage;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
